--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.5.5",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/eslint": "^8.56.7",
     "@types/ramda": "^0.29.12",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
